Optimized scrolling to be smooth. Fixed white space issue, where opened round bracket stays lonely on previous row.

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -24,6 +24,7 @@
 html {
     // font-size: 1rem;
     background-color: #fff;
+    scroll-behavior: smooth;
 }
 
 body {
